Add endpoint Get All and Hard Delete :zap:
